# ChangeLog for media-libs/cogl
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/cogl/ChangeLog,v 1.41 2013/12/23 23:28:44 eva Exp $

*cogl-1.16.0 (23 Dec 2013)

  23 Dec 2013; Gilles Dartiguelongue <eva@gentoo.org> -cogl-1.12.2-r1.ebuild,
  -cogl-1.14.0.ebuild, -cogl-1.14.1_pre20130901.ebuild, +cogl-1.16.0.ebuild,
  -files/cogl-1.12.2-dont-use-MSAA.patch:
  Version bump for Gnome 3.10. Clean up old revisions.

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> cogl-1.14.1_pre20130901-r1.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> cogl-1.14.1_pre20130901-r1.ebuild:
  amd64 stable, bug #478252

*cogl-1.14.1_pre20130901-r1 (04 Nov 2013)

  04 Nov 2013; Pacho Ramos <pacho@gentoo.org>
  +cogl-1.14.1_pre20130901-r1.ebuild,
  +files/cogl-1.14.1-framebuffer-allocate.patch:
  Try to prevent crashes with nvidia-drivers, upstream bug #703174

  14 Sep 2013; Pacho Ramos <pacho@gentoo.org> cogl-1.14.1_pre20130901.ebuild:
  Profiling needs uprof, which is not available in portage yet, bug #484750;
  gtk-doc cannot be built and upstream neither provides prebuilt files, bug
  #483332

*cogl-1.14.1_pre20130901 (01 Sep 2013)

  01 Sep 2013; Pacho Ramos <pacho@gentoo.org> +cogl-1.14.1_pre20130901.ebuild:
  Bump including all commits from 1.14 branch (fixing #481348 by Kamil Kamiński
  also)

  27 Jul 2013; Gilles Dartiguelongue <eva@gentoo.org> cogl-1.14.0.ebuild:
  Add missing dependency, per configure.

*cogl-1.12.2-r1 (03 May 2013)

  03 May 2013; Mart Raudsepp <leio@gentoo.org> -cogl-1.12.2.ebuild,
  +cogl-1.12.2-r1.ebuild, +files/cogl-1.12.2-dont-use-MSAA.patch:
  Import patch for 1.12 (used by GNOME-3.6) to not accidentally pick a MSAA
  visual as default - it can seriously degrade performance and cause SIGBUS
  crashes; both primarily with gnome-shell

  01 Apr 2013; Pacho Ramos <pacho@gentoo.org> cogl-1.14.0.ebuild:
  Fix subslot value, #463938 by Andreas Mielke.
