@@ -8,13 +8,13 @@ DIST cogl-1.14.1_pre20130901.tar.xz 1482868 SHA256 7d4469651142d99074bc59bd37cd9
 DIST cogl-1.16.0.tar.xz 1653292 SHA256 75c2c4636a050fda7ee8722ce3d9c618b08799ed92bbb72b4fdff3e73b096094 SHA512 d4e65216ad37680a58cd0a018bb2cb53b11d1e51baa2cd10e615812cbe5e1f9cd3365e248be6d84c8266cd3996039fcfb80e315bcc58f59a290555f57c013358 WHIRLPOOL 4fab497e0b7ab771a34dd53749b635bc87f16f8a2298a057497d60f9951ccaa17df200f2c120c57767007bd31c28e020ea58a7f12e2738ed5051f1d5deef164c
 EBUILD cogl-1.10.4.ebuild 2686 SHA256 01f3d78f7d9923c75a92b4b80646ed94baa58e044c01eaacb69a73461a9c2080 SHA512 f09233c6605cf2a75b3264c25ea0accfaf1be5715d90d17637bf721bde2fdd73791fb4dbaf589b3d48c8a92f0de299a8f5f52a03615b9148553d3b704b50a6da WHIRLPOOL 602db82a478d0010543d4930d5c77438f0d0d4594d3661895862b67cfed993e940ee0b5a7bb8bad6d1fa6ab2267b3914ee26396c4e35a24d10b7e906b103c5ab
 EBUILD cogl-1.14.1_pre20130901-r1.ebuild 3342 SHA256 39356c793b51a64996e09ce28da9af981ad2f80416b4c622d3151c740f0a435d SHA512 5b10e358b9e81a8bfaeb166d903111942699aec7eb4be5f461f0e87af99f1789649885675c801dfdecf1671a5391414aa3a9ea37b82fd70bf482583e4d0ab7f0 WHIRLPOOL 3f5b8c65a95c667e727e314da509f2dde7942ccfd99ba35fcb1d2b6a5192e5541bbfd3290cdb1d323609bff779b9310a14d4c310c88a95ead868dba7e9b5b50b
-EBUILD cogl-1.16.0.ebuild 3699 SHA256 5115cc2e979ce95eaf2cd01dfacc25fb83770e732adffc1d433766f52a02ef3e SHA512 0eb565b7e307554eab116edd77a75eaf1b36f380b087f151aad2cdc5c0ce213fbf39d6ac062879e3828c562e184d5a74a3e9ec0a757f3100f777bc6d0a1c3c25 WHIRLPOOL eb9281484ff7f0f8f7401b13c5b52efb85509da3d26f04c1eddb01f581883e743945c4efb6aa594daced3cb0083ebc771bd6dfe99dc3f83067335439b9d89fec
-MISC ChangeLog 6579 SHA256 d8d0e84f0f23c02215150519c1b553de10b364618fee840fb66d5f0a79cdd117 SHA512 bc6e2e8d8d6b26dc266dd04916f82131211e9c782fc9162eab3cc8b1f5a68290008d685734e0d75fead973dd5ecb17bddf5253ca811487399f10b54c1d8792ef WHIRLPOOL 6fc5795307420aa721c897c17820f3ad6dff011ff31caa0061c76394c715c901b774a00ec2006047948537ab8ca7019608067292f5ad0584a581e4577b32476c
+EBUILD cogl-1.16.0.ebuild 3699 SHA256 9bbd16b7ca6f2c477100cab38dffe39361d708026977d47c70669cd8fcebc8d4 SHA512 04502cae03d72f55569fbd529ef2d36ae2309c1ad5f3b45bcb8b627930efda6e73a06b0b46dfcb6f29b23ccd4418f6423ddcbd74383c4ff256018ae7b8960d3f WHIRLPOOL 22e5991cb61fbdb891cc210cc3ffe88bc1ccf4af2d136bbbdeb417999e955e2ed4485398cc9d7db9c3ca99790bd9a6f5e0b7133bc92e4110b85c87a5c08f82f4
+MISC ChangeLog 6669 SHA256 774ffffb3c6ad08f09b01f95503eb8d76793d84109674c8a5ba8ecc5407fc68e SHA512 38936b2b04c1941ef4eae46b218ab4bbb5c7c8079000b45a0dd19271c1bd1d4dc8ed69a997d36e0ea945e8fc6c20a5931b8f8521dcb797dc3271205ca5721ca6 WHIRLPOOL c74dcb6ae9258dc66f02157bb5da0b9ecf94a20c0fa5b6eb983e12f159ce1d2f1af48daf42da776ff7b01db2ab5be8a2728d760572632b21b0e00ae648a1fa60
 MISC metadata.xml 327 SHA256 36794b496b8dd6ed4b11b365bf371c02bfc56f9649a6310429412d76c7dcf81a SHA512 1de5c9ae58ae76a8ebe747d7c26254c44cfba86d7b1b9fc02e293a9fb5ab37a57d0ee032848bc4c5ad724b3816d04fbcd3f6e442101f01bbba3c5aa860863dd0 WHIRLPOOL b9b8ba95849b1c86be5a300cf98ede297d4f6bfa6712c675db843fb558c3e4c8831fa5193cadf47736783a7121e97aaed5ff7a1cf07e401c14146c0f027c467c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlK4xy0ACgkQ1fmVwcYIWAaDxACfQSebs8X1niHYlUUtVMT8i9RI
-4cwAniuqu0NfyQgkBLX5h1WhztvJXScC
-=h1OS
+iEYEAREIAAYFAlLe/SkACgkQ1fmVwcYIWAbOrwCg4w+fP8WRaAembnONItcWURFD
+vrgAoKRiR6f4G5zT/eYSLxjrNQwPGGVW
+=OYqs
 -----END PGP SIGNATURE-----
