@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/cogl/Attic/cogl-1.16.0.ebuild,v 1.1 2013/12/23 23:28:44 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/cogl/Attic/cogl-1.16.0.ebuild,v 1.2 2014/01/21 23:05:12 eva Exp $
 
 EAPI="5"
 CLUTTER_LA_PUNT="yes"
@@ -12,7 +12,7 @@ DESCRIPTION="A library for using 3D graphics hardware to draw pretty pictures"
 HOMEPAGE="http://www.clutter-project.org/"
 
 LICENSE="LGPL-2.1+ FDL-1.1+"
-SLOT="1.0/12" # subslot = .so version
+SLOT="1.0/15" # subslot = .so version
 # doc and profile disable for now due bugs #484750 and #483332
 IUSE="examples gles2 gstreamer +introspection +opengl +pango test" # doc profile
 KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86"
