@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/cogl
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/cogl/ChangeLog,v 1.41 2013/12/23 23:28:44 eva Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/cogl/ChangeLog,v 1.42 2014/01/21 23:05:12 eva Exp $
+
+  21 Jan 2014; Gilles Dartiguelongue <eva@gentoo.org> cogl-1.16.0.ebuild:
+  Fix subslot.
 
 *cogl-1.16.0 (23 Dec 2013)
 
